# ByteArray

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.MIT  README.md
.github/workflows/: build.yml
benchmark/: AppendSpeed.cpp  CMakeLists.txt  CreationAndCopy.cpp  InsertSpeed.cpp  MoveCopy.cpp  main.cpp
include/: ByteArray.hpp  bytearray.hpp  bytearray_processor.hpp  bytearray_view.hpp
include/ba/: bytearray_processor.hpp  bytearray_reader.hpp  bytearray_view.hpp
src/: ByteArray.cpp
tests/: AppendTest.cpp  CMakeLists.txt  ConstructTest.cpp  InsertTest.cpp  ReadTest.cpp  SerializationTest.cpp  SetTest.cpp  UtilitiesTest.cpp  ViewTest.cpp  main.cpp
